[package]
name = "kren-select"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_Ime",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
]
